update of slides

--- a/slides/geneticsAndCVD.html
+++ b/slides/geneticsAndCVD.html
@@ -69,6 +69,7 @@ Ted Laderas
 <li><p>How many genotypes exist in the data? That is, given SNP1, SNP2, SNP3, SNP4, what combinations of these exist in the data? Are there combinations that you never see?</p></li>
 <li><p>Are any variables associated the individual genotypes? Does this affect whether you include them in your model?</p></li>
 <li><p>Are there any genotypes that seem to change outcome overall?</p></li>
+<li><p>Run the whole dataset with genotypes - you don’t have enough info for the cohorts.</p></li>
 </ol>
 </div>
 
